# march-madness-2024

./: .gitignore  .gitmodules  .prettierrc.json  README.md  config.go  config.json  flake.nix  go.mod  go.sum  gomod2nix.toml  hackathon.md  main.go  package-lock.json  package.json  poster.txt  pyproject.toml  pyproject.toml.bak  saq-watch
.github/workflows/: ci.yml
cmd/competitionctl/: main.go
internal/config/: config.go  duration.go
lib/: problem_utils.py
poster/: carbon.txt  poster.txt
problems/: README.md  problem_utils.py
problems/01/: README.md  all-services.txt  generate-input.py  problem.py
problems/_placeholder/: README.md
problems/booting-up/: __main__.py  all-services.txt
problems/crafting/: README.md  generate_recipes.ts  generate_recipes_worker.ts  items.json  problem.py  recipes.json
problems/diamond-02/: README.md  problem.py
problems/empty-spaces/: README.md  __main__.py  problem.py
problems/internet-connection/: README.md  __main__.py
problems/intruder-alert/: README.md  __main__.py  csuf-buildings.txt  csuf_buildings.py  problem.py
problems/pillow-02/: problem.md
problems/samle/: p1-harder  p1.md  p2-harder.md  p2.md
server/: auth.go  r_hackathon.go  r_join.go  r_leaderboard.go  r_problems.go  server.go
server/db/: db.go  db_types.go  models.go  sql_queries.sql  sql_queries.sql.go  sql_schema.sql  sqlc.json  storage.go
server/frontend/: frontend.go  package-lock.json  package.json
server/problem/: cooldown.go  description.go  description_test.go  input.go  input_test.go  problem.go  problem_test.go  problemset.go  (+1 more)
(+27 files in other folders)
